--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 body {
 	background: linear-gradient(to left, #352a3e, #212529, #352a3e);
 }
@@ -24,7 +25,6 @@ a{
 }
 
 /* Bootstrap Button Styles */
-
 .btn-success {
     background-color: #7811d3;
 	color: #ffffff;
@@ -35,8 +35,15 @@ a{
     background-color: #5c07a6;
 }
 
-/* Card Styles */
+.btn-success:focus-visible {
+    background-color: #5c07a6;
+}
 
+.btn.btn-success:active{
+    background-color: #5c07a6 !important;
+}
+
+/* Card Styles */
 .card {
     background-color: #212121;
     border: none;
@@ -52,73 +59,7 @@ a{
     color: azure;
 }
 
-/* Main Page Graph View Styles*/
-
-.graph {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.node {
-    position: absolute;
-    width: 145px;
-    height: 145px;
-    border-radius: 50%;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    text-align: center;
-    padding: 5 px;
-    margin: 5px;
-	background-color: #352a3e;
-	transition: transform 0.75s ease, background-color 0.75s ease;
-}
-
-.central {
-    background-color: #7811d3;
-	top: 45%;
-	width: 180px;
-    height: 180px;
-}
-
-#node1 { top: 10%; left: 46%;}
-#node2 { top: 34%; left: 26%;}
-#node3 { top: 34%; left: 66%;}
-#node4 { top: 74%; left: 33%;}
-#node5 { top: 74%; left: 59%;}
-
-#node1.animateTopNode {
-	transform: translateY(100px);
-	background-color: #7811d3;
-}
-
-#node2.animateTopLeftNode {
-	transform: translateX(140px) translateY(50px);
-	background-color: #7811d3;
-}
-
-#node3.animateTopRightNode {
-	transform: translateX(-140px) translateY(50px);
-	background-color: #7811d3;
-}
-
-#node4.animateBottomLeftNode {
-	transform: translateX(80px) translateY(-70px);
-	background-color: #7811d3;
-}
-
-#node5.animateBottomRightNode {
-	transform: translateX(-80px) translateY(-70px);
-	background-color: #7811d3;
-}
-
 /* Text Styles */
-
 .about-text{
     color:white;
 }
